crates/entangle-derive/tests/ui/fail_union.rs
use entangle::prelude::*;

#[derive(ZeroCopySafe)]
#[repr(C)]
union BadUnion {
    a: u32,
    b: f32,
}
fn main() {}
